# queueboard

./: .dockerignore  .env.example  .gitignore  .gitlab-ci.yml  AGENTS.md  Dockerfile  LICENSE  Makefile  README.md  compose.yaml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 20260721_01_create_work_items.py
src/queueboard/: __init__.py  api.py  bulk_csv.py  celery_app.py  config.py  database.py  main.py  markdown.py  models.py  schemas.py  tasks.py  web.py
src/queueboard/static/: styles.css
src/queueboard/templates/: base.html  dashboard.html  detail.html  import_result.html
tests/: conftest.py  test_api.py  test_bulk_csv.py  test_web.py
